todo_app/todo-backend/manifests/psql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-psql-svc
  namespace: project
  labels:
    app: psqlapp
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: psqlapp
